--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/jioelc.webp" alt="Tanis Meje Kolam" width="200" class="rounded-circle img-thumbnail" />
+      <img src="jioelc.webp" alt="Tanis Meje Kolam" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Tenis Meje Kolam</h1>
       <p class="lead">Dadakan | Tetap Semangat</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -95,7 +95,7 @@
         <div class="row">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/jioelc.webp" class="card-img-top" alt="galery 1" />
+              <img src="jioelc.webp" class="card-img-top" alt="galery 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -103,7 +103,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/jioelc.webp" class="card-img-top" alt="galery 2" />
+              <img src="jioelc.webp" class="card-img-top" alt="galery 2" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -111,7 +111,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/jioelc.webp" class="card-img-top" alt="galery 3" />
+              <img src="jioelc.webp" class="card-img-top" alt="galery 3" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
